# cloud-metadata

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
src/: client.rs  error.rs  lib.rs  metadata.rs  provider.rs
src/providers/: aws.rs  azure.rs  gcp.rs  mod.rs
tests/: mock_metadata.rs
