[package]
name = "cloud-metadata"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Minimal Rust crate for fetching custom instance metadata from AWS, GCP, and Azure VMs"
repository = "https://github.com/haraldh/cloud-metadata"
documentation = "https://docs.rs/cloud-metadata"
keywords = ["cloud", "metadata", "aws", "gcp", "azure"]
categories = ["api-bindings"]

[lib]
name = "cloud_metadata"
path = "src/lib.rs"

[[bin]]
name = "cloud-metadata"
path = "src/bin/cloud-metadata.rs"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
thiserror = "2"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
